--- a/01_home.html
+++ b/01_home.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>themelock.com - Trans Cargo</title>
+        <title>Home</title>
         
         <link href="css/master.css" rel="stylesheet">
        
