--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
 		<![endif]-->
 	</head>
 	<body class="animated-css demopage" data-scrolling-animations="true">
-		<a href="https://silly-euler-3058d6.netlify.app/01_home.html">Home</a>
+		<a href="https://linkroad.netlify.app/01_home.html">Home</a>
 	</body>
 </html>
