--- a/01_home.html
+++ b/01_home.html
@@ -104,7 +104,7 @@
 							<li class="dropdown">
 								<a data-toggle="dropdown" class="dropdown-toggle border-hover-color1" href="#">OUR SERVICES <i class="fa fa-angle-down"></i></a>
 								<ul class="dropdown-menu">
-									<li><a href="#">OUR SERVICES </a></li>
+									<li><a href="05_services.html">OUR SERVICES </a></li>
 									<!-- <li><a href="#">OUR SERVICES 2</a></li>
 									<li><a href="#">OUR SERVICES 3</a></li> -->
 								</ul>
@@ -239,42 +239,42 @@
 	            </div>
 				<div class="row our-services">
             		<div class="col-sm-6 col-md-4 col-lg-4 wow zoomInLeft" data-wow-delay="0.3s">
-                		<a href="#">
+                		<a href="05_services.html">
                     		<span><i class="glyph-icon flaticon-boats4"></i></span>
                     		<h4>End to end load distribution</h4>
 	                        <p class="btn btn-default btn-sm" >Read More...</p>
 	                    </a>
 	                </div>
 	                <div class="col-sm-6 col-md-4 col-lg-4 wow zoomInUp" data-wow-delay="0.3s">
-                		<a href="#">
+                		<a href="05_services.html">
                     		<span><i class="glyph-icon flaticon-flying"></i></span>
                     		<h4>Reliable fleet driven by techie drivers</h4>
 	                        <p class="btn btn-default btn-sm" >Read More...</p>
 	                    </a>
 	                </div>
 	                <div class="col-sm-6 col-md-4 col-lg-4 wow zoomInRight" data-wow-delay="0.3s">
-                		<a href="#">
+                		<a href="05_services.html">
                     		<span><i class="glyph-icon flaticon-garage1"></i></span>
                     		<h4>Vehicle and goods tracking</h4>
 	                        <p class="btn btn-default btn-sm" >Read More...</p>
 	                    </a>
 	                </div>
 	                <div class="col-sm-6 col-md-4 col-lg-4 wow zoomInLeft" data-wow-delay="0.3s">
-                		<a href="#">
+                		<a href="05_services.html">
                     		<span><i class="glyph-icon flaticon-package7"></i></span>
                     		<h4>Optimizing fleet cost through multiple vehicle options. </h4>
 	                        <p class="btn btn-default btn-sm" >Read More...</p>
 	                    </a>
 	                </div>
 	                <div class="col-sm-6 col-md-4 col-lg-4 wow zoomInUp" data-wow-delay="0.3s">
-                		<a href="#">
+                		<a href="05_services.html">
                     		<span><i class="glyph-icon flaticon-railway1"></i></span>
                     		<h4>Affordable rates </h4>
 	                        <p class="btn btn-default btn-sm" >Read More...</p>
 	                    </a>
 	                </div>
 	                <div class="col-sm-6 col-md-4 col-lg-4 wow zoomInRight" data-wow-delay="0.3s">
-                		<a href="#">
+                		<a href="05_services.html">
                     		<span><i class="glyph-icon flaticon-traffic-signal"></i></span>
                     		<h4>Dashboards and insights for shippers.</h4>
 	                        <p class="btn btn-default btn-sm" >Read More...</p>
@@ -500,8 +500,8 @@
 	                    <div class="col-sm-2 wow zoomIn" data-wow-delay="0.3s">
                     		<h4>MAIN LINKS</h4>
 	                        <nav>
-                        		<a href="#">Home</a>
-	                            <a href="#">Our Services</a>
+                        		<a href="01_home.html">Home</a>
+	                            <a href="05_services.html">Our Services</a>
 	                            <a href="#">About Us</a>
 	                            <a href="#">News</a>
 	                            <a href="#">Shop</a>
