--- a/05_services.html
+++ b/05_services.html
@@ -187,7 +187,7 @@
 					<div class="row block-content">
 						<div class="col-xs-8 col-sm-4 wow zoomIn" data-wow-delay="0.3s">
 							<a href="#" class="logo-footer"></a>
-							<p>Integer congue elit non semper laoreet sed lectu orc posuer nisl tempor sed felis ac mauris ellent esque ndu ca urna Integer vitae felis.</p>
+<!-- 							<p>Integer congue elit non semper laoreet sed lectu orc posuer nisl tempor sed felis ac mauris ellent esque ndu ca urna Integer vitae felis.</p> -->
 							<div class="footer-icons">
 								<a href="#"><i class="fa fa-facebook-square fa-2x"></i></a>
 								<a href="#"><i class="fa fa-google-plus-square fa-2x"></i></a>
