--- a/12_contact.html
+++ b/12_contact.html
@@ -21,7 +21,7 @@
 		<script src="//oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
 		<![endif]-->
 	</head>
-	<body data-scrolling-animations="true">
+	<body data-scrolling-animations="true" onload="InitMap();">
 		<div class="sp-body">
 			<!-- Start Switcher -->
 			<div class="switcher-wrapper">	
@@ -135,7 +135,7 @@
 					</div>
 				</div>
 			</div>
-
+			<div id="map" style="height: 500px; width: auto;">
 			<iframe class="we-onmap wow fadeInUp" data-wow-delay="0.3s" src="https://www.google.com/maps/d/embed?mid=z2qirMhgTWQA.kXIVQWqn-ONc"></iframe>
 
 			<div class="container-fluid block-content">
@@ -146,7 +146,7 @@
 							satisfy our customers everywhere.</p>
 						<div class="adress-details wow fadeInLeft" data-wow-delay="0.3s">
 							<div>
-								<span><i class="fa fa-location-arrow"></i></span>
+								<!-- <span><i class="fa fa-location-arrow"></i></span> -->
 								<div><strong>TRANSCARGO LTD.</strong><br>3608 NewHill Station Ave CA,  Newyork 33102 </div>
 							</div>
 							<div>
@@ -278,7 +278,38 @@
 				</div>
 			</footer>
 		</div>
-
+		<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAuqtG8XhmKQPGoYpFi9dqZmhZTDWGCxE0"></script>
+		<script type="text/javascript">
+			var locations = [
+				['Raj Ghat', 28.648608, 77.250925],
+				['Purana Qila', 28.618174, 77.242686],
+				['Red Fort', 28.663973, 77.241656],
+				['India Gate', 28.620585, 77.228609],
+				['Jantar Mantar', 28.636219, 77.213846],
+				['Akshardham', 28.622658, 77.277704]
+			];
+			function InitMap() {
+				var map = new google.maps.Map(document.getElementById('map'), {
+					zoom: 13,
+					center: new google.maps.LatLng(28.614884, 77.208917),
+					mapTypeId: google.maps.MapTypeId.ROADMAP
+				});
+				var infowindow = new google.maps.InfoWindow();
+				var marker, i;
+				for (i = 0; i < locations.length; i++) {
+					marker = new google.maps.Marker({
+						position: new google.maps.LatLng(locations[i][1], locations[i][2]),
+						map: map
+					});
+					google.maps.event.addListener(marker, 'click', (function (marker, i) {
+						return function () {
+							infowindow.setContent(locations[i][0]);
+							infowindow.open(map, marker);
+						}
+					})(marker, i));
+				}
+			}
+		</script>
 		<!--Main-->   
 		<script src="js/jquery-1.11.3.min.js"></script>
 		<script src="js/jquery-ui.min.js"></script>
